[gd_scene load_steps=21 format=3 uid="uid://b3bagn8onbpyl"]

[ext_resource type="Shader" uid="uid://bgq6jdp5yiqxd" path="res://bullets/mine_bullet.gdshader" id="1_mv8n6"]
[ext_resource type="Script" uid="uid://h2fy8caf4nf2" path="res://bullets/mine_bullet.gd" id="1_yenuu"]
[ext_resource type="Shader" uid="uid://4aa430585dfx" path="res://misc/shaders/hex_outline.gdshader" id="2_aedmc"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://lib/script/char_texture.gd" id="2_yenuu"]
[ext_resource type="Shader" uid="uid://dovasowx0gp6e" path="res://misc/shaders/hex_particle.gdshader" id="5_53iy1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_53iy1"]
shader = ExtResource("2_aedmc")

[sub_resource type="Curve" id="Curve_emdy5"]
_data = [Vector2(0, 1), 0.0, -2.88146, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j2ug2"]
curve = SubResource("Curve_emdy5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rjg2h"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
gravity = Vector3(0, 0, 0)
scale_min = 12.0
scale_max = 12.0
alpha_curve = SubResource("CurveTexture_j2ug2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aedmc"]
shader = ExtResource("1_mv8n6")

[sub_resource type="Image" id="Image_53iy1"]
data = {
"data": PackedByteArray(255, 255, 255, 255),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_emdy5"]
image = SubResource("Image_53iy1")
script = ExtResource("2_yenuu")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="CircleShape2D" id="CircleShape2D_6k7aj"]
radius = 6.0

[sub_resource type="Animation" id="Animation_r3uyc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Render:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 16)]
}

[sub_resource type="Animation" id="Animation_rnuid"]
resource_name = "explode"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Render:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2.38615, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ldk5"]
_data = {
&"RESET": SubResource("Animation_r3uyc"),
&"explode": SubResource("Animation_rnuid")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_emdy5"]
shader = ExtResource("5_53iy1")

[sub_resource type="Curve" id="Curve_yenuu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.44656, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8us7s"]
curve = SubResource("Curve_yenuu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_53iy1"]
lifetime_randomness = 0.32
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
damping_min = 100.0
damping_max = 100.0
scale_min = 4.0
scale_max = 6.0
alpha_curve = SubResource("CurveTexture_8us7s")

[node name="MineBullet" type="Area2D"]
collision_layer = 6
collision_mask = 25
input_pickable = false
script = ExtResource("1_yenuu")

[node name="Trail" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_53iy1")
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_rjg2h")

[node name="Render" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_aedmc")
scale = Vector2(16, 16)
texture = SubResource("ImageTexture_emdy5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6k7aj")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7ldk5")
}
autoplay = "RESET"

[node name="Particles" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_emdy5")
emitting = false
amount = 10
lifetime = 0.25
one_shot = true
explosiveness = 0.5
randomness = 0.25
process_material = SubResource("ParticleProcessMaterial_53iy1")

[connection signal="body_entered" from="." to="." method="_on_collide"]
[connection signal="timeout" from="Timer" to="." method="_on_expire"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
